Bug 446502 - qt.qpa.wayland: Failed to initialize EGL display 3001
Summary: qt.qpa.wayland: Failed to initialize EGL display 3001
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: git master
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 446454 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-12-05 06:37 UTC by Kyle Devir
Modified: 2021-12-06 23:31 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kyle Devir 2021-12-05 06:37:40 UTC
kwin_wayland crash output: https://invent.kde.org/-/snippets/1985

kwin_wayland coredump log output: https://invent.kde.org/-/snippets/1986

kwin_wayland coredump: https://mega.nz/file/SdFQDBrZ#sESK8P1XITWU3dRg1kAfOL8k9Z0wKta5u86j0bNSKdg
Comment 1 Kyle Devir 2021-12-05 08:10:45 UTC
Using Mesa Git Main, and Arch Linux wayland-protocols 1.24.

Operating System: Arch Linux
KDE Plasma Version: 5.23.80
KDE Frameworks Version: 5.89.0
Qt Version: 5.15.2
Kernel Version: 5.15.6-arch2-1-custom (64-bit)
Graphics Platform: Wayland

Processors: 12 × AMD Ryzen 5 5600X 6-Core Processor
Memory: 15.6 GiB of RAM
Graphics Processor: AMD Radeon RX 580 Series
Comment 2 Bug Janitor Service 2021-12-05 12:47:54 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwayland-server/-/merge_requests/328
Comment 3 Kyle Devir 2021-12-05 13:14:39 UTC
I tested the MR, and it fixed the crashing. :)
Comment 4 Zamundaaa 2021-12-05 14:31:06 UTC
Git commit 3799f09beadc0114f675b98ecae14053b0ce5c18 by Xaver Hugl.
Committed on 05/12/2021 at 12:46.
Pushed by zamundaaa into branch 'master'.

dmabuf-feedback: fix crash

M  +4    -9    src/server/linuxdmabufv1clientbuffer.cpp
M  +1    -1    src/server/linuxdmabufv1clientbuffer.h
M  +0    -2    src/server/linuxdmabufv1clientbuffer_p.h

https://invent.kde.org/plasma/kwayland-server/commit/3799f09beadc0114f675b98ecae14053b0ce5c18
Comment 5 bluescreenavenger 2021-12-06 01:18:33 UTC
*** Bug 446454 has been marked as a duplicate of this bug. ***