dmabuf-feedback: fix crash

BUG: 446502